--- a/static/css/base.css
+++ b/static/css/base.css
@@ -459,6 +459,17 @@ span.bag-total.float-right {
     font-weight: 100;
 }
 
+p.discount-info {
+    background-color: #1d7b89;
+    margin-left: 12px;
+    margin-top: 32px;
+    margin-bottom: 6px;
+    margin-right: 13px;
+    color: black;
+    font-weight: 600;
+    text-align: center;
+}
+
 img.w-100.toast-image {
     margin-left: 12px;
 }
@@ -1302,6 +1313,11 @@ and (max-width: 480px) {
         margin-left: 8px;
     }
 
+    p.discount-info {
+        margin-left: 5px;
+        margin-right: 7px;
+    }
+
     img.w-100.toast-image {
         margin-left: 7px;
     }
@@ -1397,6 +1413,11 @@ and (-webkit-min-device-pixel-ratio: 2) {
         margin-left: 5px;
         margin-bottom: 10px;
         font-weight: 100;
+    }
+
+    p.discount-info {
+        margin-left: 6px;
+        margin-right: 7px;
     }
 
     .toast.show {
