Updated background colour for discount banner in toast bag to match blue for thumbs icon

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -460,7 +460,7 @@ span.bag-total.float-right {
 }
 
 p.discount-info {
-    background-color: #1d7b89;
+    background-color: #17a2b8;
     margin-left: 12px;
     margin-top: 32px;
     margin-bottom: 6px;
