Updated styling to shoppping bag page title in various mobile views, reduced top margin for title and amended font sizes as appropriate

--- a/shopping_bag/templates/shopping_bag/shopping_bag.html
+++ b/shopping_bag/templates/shopping_bag/shopping_bag.html
@@ -18,7 +18,7 @@
         <!-- Page title -->
         <div class="row">
             <div class="col">
-                <h2 class="page-title text-center">Shopping Bag</h2>
+                <h2 class="page-title text-center bag-title">Shopping Bag</h2>
                 <hr>
             </div>
         </div>
