--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1305,6 +1305,11 @@ and (max-width: 480px) {
         font-size: 14px;
     }
 
+    h2.page-title.text-center.bag-title {
+        margin-top: 10px;
+        font-size: 33px;
+    }
+
     /* toasts */
 
     .toast.show {
@@ -1314,7 +1319,7 @@ and (max-width: 480px) {
     }
 
     p.discount-info {
-        margin-left: 5px;
+        margin-left: 7px;
         margin-right: 7px;
     }
 
@@ -1406,6 +1411,11 @@ and (-webkit-min-device-pixel-ratio: 2) {
         font-size: 14px;
     }
 
+    h2.page-title.text-center.bag-title {
+        margin-top: 30px;
+        font-size: 33px;
+    }
+
     /* toast */
     span.bag-total.float-right {
         float: right!important;
@@ -1416,7 +1426,7 @@ and (-webkit-min-device-pixel-ratio: 2) {
     }
 
     p.discount-info {
-        margin-left: 6px;
+        margin-left: 7px;
         margin-right: 7px;
     }
 
@@ -1496,6 +1506,10 @@ and (-webkit-min-device-pixel-ratio: 3) {
         font-size: 14px;
     }
 
+    h2.page-title.text-center.bag-title {
+        margin-top: 10%;
+    }
+
     /* toast */
     span.bag-total.float-right {
         float: right!important;
@@ -1503,6 +1517,11 @@ and (-webkit-min-device-pixel-ratio: 3) {
         margin-left: 5px;
         margin-bottom: 10px;
         font-weight: 100;
+    }
+
+    p.discount-info {
+        margin-left: 7px;
+        margin-right: 7px;
     }
 
     .toast.show {
@@ -1630,6 +1649,10 @@ and (orientation:portrait) {
     span.product-detail.text-uppercase.mt-5,
     input.btn.btn-black.text-uppercase {
         font-size: 14px;
+    }
+
+    h2.page-title.text-center.bag-title {
+        margin-top: 20%;
     }
 }
 
