--- a/store_checkout/templates/store_checkout/checkout_form.html
+++ b/store_checkout/templates/store_checkout/checkout_form.html
@@ -21,7 +21,7 @@
         <!-- Page title -->
         <div class="row">
             <div class="col">
-                <h2 class="page-title text-center">Checkout</h2>
+                <h2 class="page-title text-center checkout">Checkout</h2>
                 <hr>
             </div>
         </div>
