--- a/store_checkout/templates/store_checkout/checkout_done.html
+++ b/store_checkout/templates/store_checkout/checkout_done.html
@@ -17,7 +17,7 @@
         <!-- Page title -->
         <div class="row">
             <div class="col">
-                <h2 class="page-title text-center">Your Order</h2>
+                <h2 class="page-title text-center order-confirm">Your Order</h2>
                 <br>
                 <hr class="page-breaker">
             </div>
