--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1319,6 +1319,11 @@ and (max-width: 480px) {
         margin-top: 10px;
         font-size: 33px;
     }
+
+    h2.page-title.text-center.order-confirm {
+        font-size: 33px;
+    }
+
     p.checkout-product-price,
     p.subtotal-text.mb-1.mt-0.small,
     p.subtotal-text.mb-1.mt-0.small,
@@ -1440,6 +1445,11 @@ and (-webkit-min-device-pixel-ratio: 2) {
         font-size: 33px;
     }
 
+    h2.page-title.text-center.order-confirm {
+        font-size: 33px;
+        margin-top: 30px;
+    }
+
     /* toast */
     span.bag-total.float-right {
         float: right!important;
@@ -1542,6 +1552,11 @@ and (-webkit-min-device-pixel-ratio: 3) {
     h2.page-title.text-center.bag-title {
         margin-top: 30px;
         font-size: 33px;
+    }
+
+    h2.page-title.text-center.order-confirm {
+        font-size: 33px;
+        margin-top: 30px;
     }
 
     /* toast */
@@ -1713,9 +1728,10 @@ and (orientation:portrait) {
     }
 
     /* order confirm */
-    
+
     h2.page-title.text-center.order-confirm {
-        margin-top: 18%;
+        font-size: 30px;
+        margin-top: 15%;
     }
 }
 
