--- a/static/css/base.css
+++ b/static/css/base.css
@@ -553,7 +553,7 @@ span.bag-pop-checkout.text-uppercase {
 }
 
 .w-100.toast-capper.info {
-    background-color: #063ebb;
+    background-color: #17a2b8;
     height: 13px;
     border: 1px solid #fafafa;
     border-bottom: 0;
