--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -43,7 +43,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
   <a class="btn back-home" href="{% url 'home' %}">Home</a>
-  <button class="primaryAction" type="submit" href="{% url 'user_profile' %}">{% trans "Sign In" %}</button>
+  <button class="primaryAction" href="{% url 'user_profile' %}" type="submit">{% trans "Sign In" %}</button>
   <p class="allauth-text mt-2">
     <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
   </p>
