--- a/user_profile/templates/user_profile/user_profile.html
+++ b/user_profile/templates/user_profile/user_profile.html
@@ -17,7 +17,7 @@
         <!-- Page title -->
         <div class="row">
             <div class="col">
-                <h2 class="page-title text-center">{{ user }}</h2>
+                <h2 class="page-title text-center profile-header">{{ user }}</h2>
                 <hr>
             </div>
         </div>
