--- a/store_checkout/templates/store_checkout/checkout_done.html
+++ b/store_checkout/templates/store_checkout/checkout_done.html
@@ -37,7 +37,7 @@
                             <p class="mb-0 text-white">Order Number</p>
                         </div>
                         <div class="col-12 col-md-8 text-white text-md-right">
-                            <p class="mb-0">{{ order.order_number }}</p>
+                            <p class="order-info">{{ order.order_number }}</p>
                         </div>
                     </div>
                     <div class="row">
@@ -45,7 +45,7 @@
                             <p class="mb-0 text-white">Order Date</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0 text-white">{{ order.date }}</p>
+                            <p class="order-info">{{ order.date }}</p>
                         </div>
                     </div>
                     <hr>
@@ -79,7 +79,7 @@
                             <p class="mb-0 text-white">First Name</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0 text-white">{{ order.first_name }}</p>
+                            <p class="order-info">{{ order.first_name }}</p>
                         </div>
                     </div>
                     <div class="row">
@@ -87,7 +87,7 @@
                             <p class="mb-0 text-white">Last Name</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0 text-white">{{ order.last_name }}</p>
+                            <p class="order-info">{{ order.last_name }}</p>
                         </div>
                     </div>
                     <div class="row">
@@ -95,7 +95,7 @@
                             <p class="mb-0 text-white">Address 1</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0 text-white">{{ order.address1 }}</p>
+                            <p class="order-info">{{ order.address1 }}</p>
                         </div>
                     </div>
                     <div class="row">
@@ -103,7 +103,7 @@
                             <p class="mb-0 text-white">Address 2</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0 text-white">{{ order.address2 }}</p>
+                            <p class="order-info">{{ order.address2 }}</p>
                         </div>
                     </div>
                     <div class="row">
@@ -111,7 +111,7 @@
                             <p class="mb-0 text-white">County</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0 text-white">{{ order.county }}</p>
+                            <p class="order-info">{{ order.county }}</p>
                         </div>
                     </div>
                     <div class="row">
@@ -119,7 +119,7 @@
                             <p class="mb-0 text-white">Town or City</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0 text-white">{{ order.town_or_city }}</p>
+                            <p class="order-info">{{ order.town_or_city }}</p>
                         </div>
                     </div>
                     <div class="row">
@@ -127,7 +127,7 @@
                             <p class="mb-0 text-white">Postcode</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0 text-white">{{ order.postcode }}</p>
+                            <p class="order-info">{{ order.postcode }}</p>
                         </div>
                     </div>
                     <div class="row">
@@ -135,7 +135,7 @@
                             <p class="mb-0 text-white">Country</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0 text-white">{{ order.country }}</p>
+                            <p class="order-info">{{ order.country }}</p>
                         </div>
                     </div>
                     <div class="row">
@@ -143,7 +143,7 @@
                             <p class="mb-0 text-white">Phone Number</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0 text-white">{{ order.phone_number }}</p>
+                            <p class="order-info">{{ order.phone_number }}</p>
                         </div>
                     </div>
                     <hr>
@@ -158,7 +158,7 @@
                             <p class="mb-0 text-white">Order Total</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0 text-white">£{{ order.bag_total }}</p>
+                            <p class="order-info">£{{ order.bag_total }}</p>
                         </div>
                     </div>
                     <div class="row">
@@ -166,7 +166,7 @@
                             <p class="mb-0 text-white">Delivery</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0 text-white">£{{ order.delivery_total }}</p>
+                            <p class="order-info">£{{ order.delivery_total }}</p>
                         </div>
                     </div>
                     <div class="row">
@@ -174,7 +174,7 @@
                             <p class="mb-0 text-white">Grand Total</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0 text-white">£{{ order.grand_total }}</p>
+                            <p class="order-info">£{{ order.grand_total }}</p>
                         </div>
                     </div>
                 </div>
