--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1121,7 +1121,7 @@ input#id_image {
 a.product-edit {
     font-size: 15px;
     font-weight: 700;
-    border: 1px solid #007bff;
+    border: 1px solid #17a2b8;
     padding-left: 7px;
     padding-right: 7px;
     padding-top: 5px;
@@ -1156,6 +1156,13 @@ a.product-delete:hover {
     padding: 10px;
     padding-bottom: 47px;
     border-radius: 5px;
+}
+
+ /* order page */
+
+p.order-info {
+    color: #fafafa;
+
 }
 
 /* Media Queries */
@@ -1387,6 +1394,18 @@ and (max-width: 480px) {
     a.category-title {
         font-size: 20px;
     }
+
+    /* order page */
+
+    p.order-info {
+        color: #17a2b8;
+        margin-bottom: 15px;
+    }
+
+    .row.order-details {
+        justify-content: center;
+        background: #000000d9;
+    }
 }
 
 /* iPhone 6,7,8 */
@@ -1486,6 +1505,18 @@ and (-webkit-min-device-pixel-ratio: 2) {
     p.checkout-grand-total,
     p.checkout-bag-total {
         margin-right: 10px;
+    }
+
+    /* order page */
+
+    p.order-info {
+        color: #17a2b8;
+        margin-bottom: 15px;
+    }
+
+    .row.order-details {
+        justify-content: center;
+        background: #000000d9;
     }
 }
 
@@ -1602,6 +1633,17 @@ and (-webkit-min-device-pixel-ratio: 3) {
     p.checkout-grand-total,
     p.checkout-bag-total {
         margin-right: 10px;
+    }
+
+    /* order page */
+
+    p.order-info {
+        color: #17a2b8;
+        margin-bottom: 15px;
+    }
+    .row.order-details {
+        justify-content: center;
+        background: #000000d9;
     }
 }
 
