--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1166,6 +1166,11 @@ p.order-info {
 
 }
 
+.row.order-details {
+    justify-content: center;
+    background: #000000d9;
+}
+
 /* Media Queries */
 
 
