Product increment bug fixed regarding updating bag with a product size

--- a/shopping_bag/templates/shopping_bag/shopping_bag.html
+++ b/shopping_bag/templates/shopping_bag/shopping_bag.html
@@ -74,6 +74,9 @@
                                                             </span>
                                                         </button>
                                                     </div>
+                                                    {% if item.product.product_sizes %}
+                                                        <input type="hidden" name="product_size" value="{{ item.size }}">
+                                                    {% endif %}
                                                 </div>
                                             </div>
                                         </form>
